[package]
name = "fafnir"
version = "0.3.12"
authors = ["Adrien Matissart <a.matissart@qwantresearch.com>"]
edition = "2021"

[dependencies]
async-compression = { version = "0.3.8", features = [ "gzip", "tokio" ] }
elasticsearch = "7.14.0-alpha.1"
futures = { version = "0.3.16", default_features = false }
geo-types = "0.7"
itertools = "0.9"
num_cpus = "1.13"
once_cell = "1.4"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde_json = { version = "1", features = ["raw_value"] }
serde = { version = "1", default_features = false }
structopt = "0.3"
tokio-postgres = "0.7"
tokio-stream = { version = "0.1", features = [ "io-util" ] }
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "time", "sync", "io-util"] }
tracing-futures = "0.2"
tracing = { version = "0.1", default_features = false, features = ["release_max_level_info"] }
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.11.9", features = ["json"] }

mimirsbrunn = { git = "https://github.com/remi-dupre/mimirsbrunn.git", rev="13861dcabfba68d94a3cbc92d3b77262e1a8a7b6"}
mimir = { git = "https://github.com/remi-dupre/mimirsbrunn.git", rev="13861dcabfba68d94a3cbc92d3b77262e1a8a7b6" }
places = { git = "https://github.com/remi-dupre/mimirsbrunn.git", rev="13861dcabfba68d94a3cbc92d3b77262e1a8a7b6" }

[dev-dependencies]
cosmogony = "0.11"
serde_derive = "1"
approx = "0.5.0"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1

[[bin]]
name = "taginfo"
path = "src/bin/taginfo2mimir.rs"

[[bin]]
name = "tripadvisor"
path = "src/bin/tripadvisor2mimir.rs"

[[bin]]
name = "openmaptiles"
path = "src/bin/openmaptiles2mimir.rs"