[package]
name = "fafnir"
version = "0.3.12"
authors = ["Adrien Matissart <a.matissart@qwantresearch.com>"]
description = "Tripadvisor and OSM elasticsearch importer"
keywords = [ "fafnir", "elasticsearch", "pipeline", "importer" ]
license = "AGPLv3"
repository = "https://github.com/Qwant/fafnir"
categories = [ "application" ]
edition = "2021"

[dependencies]
elasticsearch = "7.14.0-alpha.1"
flate2 = "1.0"
futures = { version = "0.3.16", default_features = false }
geo-types = "0.7"
itertools = "0.10"
num_cpus = "1.13"
once_cell = "1.4"
quick-xml = { version = "0.23", features = ["serialize"] }
serde_json = { version = "1", features = ["raw_value"] }
serde = { version = "1", default_features = false }
structopt = "0.3"
tokio-postgres = "0.7"
tokio-stream = { version = "0.1", features = [ "io-util" ] }
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "time", "sync", "io-util"] }
tracing-futures = "0.2"
tracing = { version = "0.1", default_features = false, features = ["release_max_level_info"] }
url = { version = "2", features = ["serde"] }

mimirsbrunn = { path = "vendor/mimirsbrunn" }
mimir = { path = "vendor/mimirsbrunn/libs/mimir" }
places = { path = "vendor/mimirsbrunn/libs/places" }

[dev-dependencies]
cosmogony = "0.12"
serde_derive = "1"
approx = "0.5.0"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
